k8s/10-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener
  namespace: tg-sales-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: listener
    spec:
      containers:
      - name: listener
        image: ghcr.io/niknik516-1/tg-sales-bot/listener:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "32Mi"
            cpu: "20m"
          limits:
            memory: "96Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: ghcr-secret
