k8s/12-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: tg-sales-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: ghcr.io/niknik516-1/tg-sales-bot/admin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          hostPort: 8082
        volumeMounts:
        - name: data
          mountPath: /app/data
        resources:
          requests:
            memory: "64Mi"
            cpu: "20m"
          limits:
            memory: "160Mi"
            cpu: "100m"
      volumes:
      - name: data
        hostPath:
          path: /var/develop/tg-sales-bot/data
          type: Directory
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: tg-sales-bot
spec:
  selector:
    app: admin
  ports:
  - port: 8080
    targetPort: 8080
